--- a/style.css
+++ b/style.css
@@ -1,17 +1,79 @@
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1rem; 
+}
 .site-header {
   background: rgba( 255, 0, 0, 0.15 );
+  padding: 10px;
+  margin: 10px;
 }
+
 .site-nav{
   background: rgba( 0, 255, 0, 0.15 );
+  margin: 10px;
 }
+
+ul {
+display: flex;
+list-style: none;
+}
+
+li{
+  display: inline-flex;
+ padding: 10px;
+  flex-grow: 1;
+  border: 2px dashed rgba(70, 110, 70, 0.15);  
+  margin: 0; 
+}
+article{
+margin: 0; 
+padding: 0; 
+  
+ 
+}
+
 .site-main {
   background: #ffc;
+  margin: 10px;
+  margin-bottom: 0;
+
 }
-.hentry {
+.main-section{
+  display: grid;
+  
+  grid-template-columns: 20% auto 20%;
+}
+.main-section__title{
+  padding: 30px;
+  padding-bottom: 10px;
+  
+}
+h2{
+  grid-column: 2/4;
+  padding-left: 0;
+}
+h3{
+  margin-bottom: 10px;
+
+}
+.hentry{
   border: 2px dashed black;
-  margin: 1rem;
   padding: 1rem;
+  grid-column: 2/3;
+  align-items: center;
+
 }
+
+
 footer {
  background: rgba( 0, 0, 255, 0.15 ); 
+ padding:10px;
+ margin: 0;
+margin-left: 10px;
+margin-right: 10px;
+
 }
+
