--- a/style.css
+++ b/style.css
@@ -43,17 +43,18 @@ padding: 0;
 }
 .main-section{
   display: grid;
-  
-  grid-template-columns: 20% auto 20%;
+  grid-template-columns: 20% 60% 20%;
+   
 }
 .main-section__title{
-  padding: 30px;
+  padding-left: 0;
+  padding-top: 30px;
   padding-bottom: 10px;
-  
+  grid-column: 2/3;
 }
 h2{
-  grid-column: 2/4;
-  padding-left: 0;
+  grid-column: 1/4;
+  font-size: 1.5rem;
 }
 h3{
   margin-bottom: 10px;
@@ -62,11 +63,14 @@ h3{
 .hentry{
   border: 2px dashed black;
   padding: 1rem;
-  grid-column: 2/3;
-  align-items: center;
+  grid-column: 2/4;
+  margin-bottom: 40px;
 
 }
-
+.coso{
+  display: flex;
+ grid-column: 2/3;
+}
 
 footer {
  background: rgba( 0, 0, 255, 0.15 ); 
